# vgi-bgp

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-entrypoint.sh  run_tests.sh  vgi-lint.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-publish.yml  release.yml
ci/: check-version.sh
crates/bgp-core/: Cargo.toml
crates/bgp-core/src/: aspath.rs  community.rs  decode.rs  inet.rs  lib.rs
crates/bgp-core/tests/: fuzz.rs  golden.rs
crates/bgp-wasm/: Cargo.toml
crates/bgp-wasm/src/: lib.rs
crates/bgp-worker/: Cargo.toml
crates/bgp-worker/src/: arrow_io.rs  cloud.rs  lib.rs  main.rs  meta.rs  options.rs  reader.rs
crates/bgp-worker/src/scalar/: community.rs  mod.rs  path.rs  version.rs
crates/bgp-worker/src/table/: mod.rs  peers.rs  read_rib.rs  read_updates.rs
data/: generate_fixtures.rs  rib.mrt  truncated.mrt  updates.mrt
test/sql/: errors.test  peers.test  read_rib.test  read_updates.test  scalars.test  scan_state.test
wasm/: build.sh
