[package]
name = "bgp-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "VGI worker decoding MRT routing dumps (TABLE_DUMP_V2 RIB + BGP4MP updates) into DuckDB rows over Apache Arrow, reusing the core inet type for prefixes and peer IPs"

[[bin]]
name = "bgp-worker"
path = "src/main.rs"

[dependencies]
vgi.workspace = true
vgi-rpc.workspace = true
arrow.workspace = true
arrow-array.workspace = true
arrow-buffer.workspace = true
arrow-schema.workspace = true
arrow-select.workspace = true
arrow-cast.workspace = true
bgp-core.workspace = true
log = "0.4"
env_logger = "0.11"
# Cloud object-store access for s3:// and http(s):// paths. `object_store` is
# arrow-independent, so it does not disturb the arrow-59 pin. tokio drives the
# async object_store calls from the synchronous worker (see src/cloud.rs).
object_store = { version = "0.14", features = ["aws", "http"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
url = "2"
futures = "0.3"
percent-encoding = "2"
glob = "0.3"
