[package]
name = "bgp-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "VGI worker decoding MRT routing dumps (TABLE_DUMP_V2 RIB + BGP4MP updates) into DuckDB rows over Apache Arrow, reusing the core inet type for prefixes and peer IPs"

[lib]
name = "bgp_worker"
path = "src/lib.rs"

[[bin]]
name = "bgp-worker"
path = "src/main.rs"

[dependencies]
arrow.workspace = true
arrow-array.workspace = true
arrow-buffer.workspace = true
arrow-schema.workspace = true
arrow-select.workspace = true
arrow-cast.workspace = true
bgp-core.workspace = true
log = "0.4"
url = "2"
futures = "0.3"
percent-encoding = "2"
glob = "0.3"

# --- Native ---------------------------------------------------------------
# Cloud object-store access for s3:// and http(s):// paths. `object_store` is
# arrow-independent, so it does not disturb the arrow-59 pin. tokio drives the
# async object_store calls from the synchronous worker (see src/cloud.rs).
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# The SDK's real default features — unchanged from before the wasm split.
vgi = { workspace = true, features = ["sqlite", "transport-http"] }
vgi-rpc = { workspace = true, features = ["http"] }
object_store = { version = "0.14", features = ["aws", "http"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
env_logger = "0.11"

# --- wasm32 ---------------------------------------------------------------
# No sqlite (C) and no HTTP transport (tokio/mio/axum); the bincode stream codec
# is what the SAB byte-channel transport needs. `aws`/`http` on object_store pull
# reqwest+rustls (sockets) and aws-lc-rs (C/asm), none of which build for wasm —
# the `-base` features are the same S3/HTTP code without a bundled transport or
# crypto provider.
[target.'cfg(target_arch = "wasm32")'.dependencies]
vgi = { workspace = true }
vgi-rpc = { workspace = true, features = ["stream-codec"] }
object_store = { version = "0.14", default-features = false, features = [
    "aws-base",
    "http-base",
] }
tokio = { version = "1", default-features = false, features = ["rt", "time"] }
